test/org/midica/testfiles/failing/chord-with-duplicate-note.midica
INCLUDE inc/instruments.midica
CHORD test c,d,c
